# agh-cpp-project

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build_pipeline.yml
assets/: assets.xml  levels.xml
src/: AssetLoader.cpp  AssetLoader.h  Button.cpp  Button.h  common.h  main_menu.cpp  main_menu.h
src/game/: Game.cpp  Game.h  GameData.cpp  GameData.h  HPBar.cpp  HPBar.h  Level.cpp  Level.h  Projectile.cpp  Projectile.h  Ship.cpp  Ship.h  enemy_ais.cpp  enemy_ais.h  game_data.h  hp_bar.cpp  hp_bar.h  level.cpp  level.h  projectile.cpp  projectile.h  ships.cpp  ships.h  visual_effect.cpp  visual_effect.h
src/gui/: Animation.cpp  Animation.h  Button.cpp  Button.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.cpp  Screen.h  animation.cpp  animation.h  auxilary_screens.cpp  auxilary_screens.h  auxiliary_screens.cpp  auxiliary_screens.h  button.cpp  button.h  main_menu_screen.cpp  main_menu_screen.h  screen.cpp  screen.h
src/system/: AssetLoader.cpp  AssetLoader.h  Collidable.cpp  Collidable.h  SoundEngine.cpp  SoundEngine.h  asset_loader.cpp  asset_loader.h  collidable.cpp  collidable.h  common.cpp  common.h  context.h  sound_engine.cpp  sound_engine.h
